trying to append user choices to HideShowResults div

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,17 @@
     background-color: #0a290a;
 }
 
+.btn-lg {
+color: white;
+background-color: #0a290a;
+}
+
+
+.btn-primary {
+    color: white;
+    background-color: #0a290a;
+}
+
 h3 {
     margin-left: 40px;
     color:#051405;
